syntax = "proto3";

package auth;

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  LoginData data = 3;
}

message LoginData {
  string token = 1;
  string refreshToken = 2;
  string userId = 3;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message RefreshTokenResponse {
  bool success = 1;
  string message = 2;
  RefreshTokenData data = 3;
}

message RefreshTokenData {
  string token = 1;
  string refreshToken = 2;
  string userId = 3;
}

